<resources>
    <string name="app_name">TIA Tuition Calculator</string>
    <string name="tia_tuition_calculator">TIA Tuition Calculator</string>
    <string name="international_full_time">International Full-time</string>
    <string name="international_part_time">International Part-time</string>
    <string name="local_full_time_amp_part_time"><![CDATA[Local Full-time & Part-time]]></string>
    <string name="esl_pathway_test_prep">ESL / PATHWAY / TEST PREP</string>
    <string name="tialogo">TIALogo</string>
    <string name="international_full_time_tuition">International Full-time Tuition</string>
    <string name="registration">REGISTRATION  </string>
    <string name="additional_high_school_courses">ADDITIONAL HIGH SCHOOL COURSES </string>
    <string name="high_school_program_grade_9_12">HIGH SCHOOL PROGRAM GRADE 9 - 12</string>
    <string name="non_refundable">- NON-REFUNDABLE</string>
    <string name="priceRegistration">$350</string>
    <string name="annual_activity_fee">ANNUAL ACTIVITY FEE</string>
    <string name="placement_fee">HOMESTAY - PLACEMENT FEE</string>
    <string name="airport_pickup">HOMESTAY - AIRPORT PICKUP</string>
    <string name="default_program_fee_details">- 8 COURSES PER YEAR</string>
    <string name="current_total">Current Total:</string>
    <string name="currency_unit">CAD $</string>
    <string name="program_fee">$17,600</string>
    <string name="btnNext">Next</string>
    <string name="btnBack">BACK</string>
    <string name="feeAdditionalCourse">$2,200/course</string>
    <string name="fee_6monthsminimum">$1,250/month</string>
    <string name="fee_placement">$250</string>
    <string name="fee_airport">$150</string>
    <string name="fee_activity">$500</string>
    <string name="type_number_of_courses">- TYPE NUMBER OF COURSES</string>
    <string name="currentTotal_default">350.00</string>
    <string name="homestay_6_months_minimum">HOMESTAY - 6 MONTHS MINIMUM</string>
    <string name="one_time">- ONE-TIME</string>
    <string name="detailsActivityFee1">- SCHOOL TRIPS</string>
    <string name="detailsActivityFee2">- EXTRACURRICULAR ACTIVITIES</string>
    <string name="excluding_meals">- Excluding Meals</string>
    <string name="textbook_rental_amp_material_fee"><![CDATA[TEXTBOOK RENTAL & MATERIAL FEE]]></string>
    <string name="feeRental">$200</string>
    <string name="detailRental">- FOR ONE SCHOOL YEAR</string>
    <string name="security_deposit">SECURITY DEPOSIT</string>
    <string name="refundable">- Refundable</string>
    <string name="health_insurance">HEALTH INSURANCE</string>
    <string name="feeHealthInsurance">$600</string>
    <string name="school_amp_homestay"><![CDATA[- SCHOOL & HOMESTAY]]></string>
    <string name="detailHealthInsurance">- 12 MONTHS</string>
    <string name="feeCustodianshipTotal">$1,700</string>
    <string name="custodianship">CUSTODIANSHIP</string>
    <string name="legal_fee">- LEGAL FEE</string>
    <string name="feeCustodianship12Months">$1,500</string>
    <string name="detailCustodianship2">- 12 MONTHS</string>
    <string name="titleTotal">Total Tuition Fee</string>
    <string name="txtTotal">Total:</string>
    <string name="txtSubtotal">Subtotal:</string>
    <string name="subtotal">$0.0</string>
    <string name="tax">$0.0</string>
    <string name="total">$0.0</string>
    <string name="txtTax">Tax (13%):</string>
    <string name="btnMainMenu">Back to Menu</string>
    <string name="btnNote">NOTE</string>
    <string name="international_part_time_fee">$100.00</string>
    <string name="feeNightCourse">$1,800/course</string>
    <string name="txtDay">- DAY</string>
    <string name="txtNight">- NIGHT</string>
</resources>