<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-20dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/tialogo"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical2"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tia" />

    <TextView
        android:id="@+id/title_feecalc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tia_tuition_calculator"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnIFT"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/international_full_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_feecalc" />

    <Button
        android:id="@+id/btnIPT"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/international_part_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIFT" />

    <Button
        android:id="@+id/btnLFPT"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/local_full_time_amp_part_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIPT" />

    <Button
        android:id="@+id/btnEPT"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/esl_pathway_test_prep"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLFPT" />

</androidx.constraintlayout.widget.ConstraintLayout>