<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".InternationalParttimeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:text="International Part-time Tuition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNote"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <CheckBox
                    android:id="@+id/chkRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feeRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/international_part_time_fee"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/non_refundable"
                    android:textColor="#D50000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <CheckBox
                    android:id="@+id/chkDayCourse"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:text="@string/high_school_program_grade_9_12"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feeDayCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/feeAdditionalCourse"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <TextView
                    android:id="@+id/txtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/txtDay"
                    android:textColor="#D50000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <TextView
                    android:id="@+id/txtDayCourses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/type_number_of_courses"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/numDayCourses"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="0"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <CheckBox
                    android:id="@+id/chkNightCourse"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:buttonTint="@color/black"
                    android:text="@string/high_school_program_grade_9_12"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feeNightCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/feeNightCourse"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <TextView
                    android:id="@+id/txtNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/txtNight"
                    android:textColor="#D50000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_grey">

                <TextView
                    android:id="@+id/numCoursesNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/type_number_of_courses"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/numNightCourses"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="0"
                    android:inputType="number" />

            </TableRow>

        </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTotal" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <TextView
        android:id="@+id/currentTotal"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="$0.00"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/currencyUnit"
        app:layout_constraintTop_toBottomOf="@+id/scrollview" />

    <TextView
        android:id="@+id/currencyUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/currency_unit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>